--- a/package.json
+++ b/package.json
@@ -8,56 +8,54 @@
     "license": "GPL-3.0-or-later",
     "private": true,
     "dependencies": {
-        "@dogstudio/highway": "^2.1.2",
+        "@dogstudio/highway": "^2.1.3",
         "awesome-sass-easing": "^1.1.2",
-        "babel-loader": "^8.0.5",
-        "bulma": "^0.7.1",
+        "babel-loader": "^8.1.0",
         "es6-promise": "^4.2.8",
-        "foundation-sites": "^6.5.3",
+        "foundation-sites": "^6.6.2",
         "hamburgers": "^1.1.3",
         "isomorphic-fetch": "^2.2.1",
-        "jquery": "^3.3.1",
-        "lazysizes": "^5.0.0-rc2",
+        "jquery": "^3.4.1",
+        "lazysizes": "^5.2.0",
         "lity": "^2.4.0",
-        "normalize.css": "8.0.1",
-        "objectFitPolyfill": "^2.1.1",
+        "normalize.css": "^8.0.1",
+        "objectFitPolyfill": "^2.3.0",
         "scrollmonitor": "^1.2.4",
-        "slick-slider": "^1.8.2",
-        "smooth-scroll": "^16.0.3",
-        "vee-validate": "^2.1.0-beta.11",
-        "vue": "^2.5.9",
+        "smooth-scroll": "^16.1.3",
+        "vee-validate": "^3.2.5",
+        "vue": "^2.6.11",
         "vue-resource": "^1.5.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.4",
-        "@babel/preset-env": "^7.4",
-        "autoprefixer": "^9.4.7",
+        "@babel/core": "^7.9.0",
+        "@babel/preset-env": "^7.9.0",
+        "autoprefixer": "^9.7.5",
         "babel-plugin-transform-es2015-template-literals": "^6.22.0",
-        "babel-plugin-transform-runtime": "^6.15.0",
-        "browser-sync": "^2.26.3",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.2.2",
-        "copy-webpack-plugin": "^5.0.3",
-        "core-js": "3",
-        "css-loader": "3.2.0",
-        "file-loader": "4.2.0",
+        "copy-webpack-plugin": "^5.1.1",
+        "core-js": "^3.6.4",
+        "css-loader": "^3.5.0",
+        "file-loader": "^6.0.0",
         "friendly-errors-webpack-plugin": "^1.7.0",
-        "mini-css-extract-plugin": "^0.5.0",
-        "moment": "^2.14.1",
-        "node-sass": "^4.11.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "moment": "^2.24.0",
+        "node-sass": "^4.13.1",
         "postcss-clean": "^1.1.0",
         "postcss-import": "^12.0.1",
-        "postcss-import-url": "^4.0.0",
+        "postcss-import-url": "^5.1.0",
         "postcss-loader": "^3.0.0",
-        "sass-loader": "^7.1.0",
-        "style-loader": "1.0.0",
-        "webapp-webpack-plugin": "^2.6.0",
-        "webpack": "^4.29.5",
-        "webpack-cli": "^3.2.3",
-        "webpackbar": "4.0.0"
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.1.3",
+        "webapp-webpack-plugin": "^2.7.1",
+        "webpack": "^4.42.1",
+        "webpack-cli": "^3.3.11",
+        "webpackbar": "^4.0.0"
     },
     "scripts": {
-        "start": "webpack --mode development --watch", 
-        "build": "webpack --mode production"
+        "start": "webpack --env.development --mode development --watch",
+        "build": "webpack --env.production --mode production"
     },
     "bugs": {
         "email": "hello@boyerwebstudios.com"
