fixed favicon generation

--- a/cms/.env.example
+++ b/cms/.env.example
@@ -20,8 +20,9 @@ DB_TABLE_PREFIX=""
 DB_PORT=3306
 
 # URL & path settings
-ASSETS_URL=http://localhost:8000/
-SITE_URL=http://localhost:8000/
+ASSETS_URL=http://localhost/
+SITE_URL=http://localhost/
+DEFAULT_SITE_URL="http://localhost/"
 WEB_ROOT_PATH=/var/www/cms/web
 
 # Craft & Plugin Licenses
@@ -45,11 +46,11 @@ CLOUDFRONT_DISTRIBUTION_ID=
 CLOUDFRONT_PATH_PREFIX=
 
 # Redis settings
-REDIS_ENABLED=false
-REDIS_HOSTNAME=REPLACE_ME
+REDIS_ENABLED=true
+REDIS_HOSTNAME=redis
 REDIS_PORT=6379
 REDIS_DEFAULT_DB=0
-REDIS_CRAFT_DB=3
+REDIS_CRAFT_DB=0
 
 # Disqus settings
 DISQUS_PUBLIC_KEY=
