--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bws-craft-starter-bootstrap",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "A simple project setup for beginning a new Craft CMS site. GPL-3.0-or-later",
     "main": "src/app.js",
     "author": "John Robert Boyer, boyerwebstudios <john@boyerwebstudios.com>",
@@ -37,6 +37,7 @@
         "copy-webpack-plugin": "^5.1.1",
         "core-js": "^3.6.4",
         "css-loader": "^3.5.0",
+        "favicons-webpack-plugin": "^3.0.1",
         "file-loader": "^6.0.0",
         "friendly-errors-webpack-plugin": "^1.7.0",
         "mini-css-extract-plugin": "^0.9.0",
@@ -48,7 +49,6 @@
         "postcss-loader": "^3.0.0",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
-        "webapp-webpack-plugin": "^2.7.1",
         "webpack": "^4.42.1",
         "webpack-cli": "^3.3.11",
         "webpackbar": "^4.0.0"
