--- a/.gitignore
+++ b/.gitignore
@@ -19,16 +19,16 @@
 
 # COMPOSER
 vendor
-/cms/vendor
+cms/vendor
 
 # CRAFT STORAGE
-/cms/storage/*
+cms/storage/*
 !/cms/storage/.gitkeep
-/cms/storage/logs
+cms/storage/logs
 
 # ASSETS
-/cms/web/assets/*
-/cms/web/imager
+cms/web/assets/*
+cms/web/imager
 
 # BACKUPS
 /backups/*
