--- a/cms/composer.json
+++ b/cms/composer.json
@@ -66,7 +66,7 @@
       "@php -r \"file_exists('../.env.sh') || copy('../.env.sh.example', '../.env.sh');\"",
       "@php -r \"file_exists('web/.htaccess') || copy('web/.htaccess.example', 'web/.htaccess');\"",
       "@php craft setup/welcome",
-      "@php ../setup-script welcome"
+      "@php ../setup-script setup"
     ]
   }
 }
