--- a/cms/composer.json
+++ b/cms/composer.json
@@ -20,18 +20,18 @@
   "minimum-stability": "RC",
   "require": {
     "aelvan/imager": "v2.4.0",
-    "barrelstrength/sprout-fields": "3.6.1",
-    "craftcms/cms": "3.4.14",
-    "craftcms/contact-form": "2.2.6",
+    "barrelstrength/sprout-fields": "^3.6.1",
+    "craftcms/cms": "^3.4.14",
+    "craftcms/contact-form": "^2.2.6",
     "craftcms/feed-me": "^4.1",
     "craftcms/mailgun": "^1.4",
-    "craftcms/redactor": "2.6.1",
-    "ether/logs": "3.0.3",
-    "ether/seo": "3.6.3",
+    "craftcms/redactor": "^2.6.1",
+    "ether/logs": "^3.0.3",
+    "ether/seo": "^3.6.3",
     "jalendport/craft-queuemanager": "^1.2",
     "marionnewlevant/twig-perversion": "^2.0",
-    "mmikkel/child-me": "1.1.0",
-    "mmikkel/cp-field-inspect": "1.1.3",
+    "mmikkel/child-me": "^1.1.0",
+    "mmikkel/cp-field-inspect": "^1.1.3",
     "mmikkel/retcon": "^2.0",
     "nystudio107/craft-minify": "^1.2.5",
     "nystudio107/craft-routemap": "^1.0.0",
@@ -42,11 +42,11 @@
     "sebastianlenz/linkfield": "^2.0.0@beta",
     "solspace/craft-freeform": "3.6.3",
     "spicyweb/craft-embedded-assets": "^2.0",
-    "spicyweb/craft-neo": "2.7.5",
+    "spicyweb/craft-neo": "^2.7.5",
     "unionco/calendarize": "^1.2",
     "unionco/craft-related-entry-types": "^0.2.2",
-    "verbb/expanded-singles": "1.0.7",
-    "verbb/field-manager": "2.1.1",
+    "verbb/expanded-singles": "^1.0.7",
+    "verbb/field-manager": "^2.1.1",
     "vlucas/phpdotenv": "^2.4.0",
     "yiisoft/yii2-redis": "^2.0.6"
   },
