--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "laradock-bootstrap"]
+[submodule "laradock"]
 	path = laradock
 	url = git@github.com:joeRob2468/laradock.git
+	update = rebase
