--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "postcss-import": "^12.0.1",
         "postcss-import-url": "^5.1.0",
         "postcss-loader": "^3.0.0",
+        "postcss-scss": "^2.0.0",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
         "webpack": "^4.42.1",
