adjusted base CMS setup, disabled redis by default

--- a/cms/.env.example
+++ b/cms/.env.example
@@ -46,7 +46,7 @@ CLOUDFRONT_DISTRIBUTION_ID=
 CLOUDFRONT_PATH_PREFIX=
 
 # Redis settings
-REDIS_ENABLED=true
+REDIS_ENABLED=false
 REDIS_HOSTNAME=redis
 REDIS_PORT=6379
 REDIS_DEFAULT_DB=0
