updated base SCSS structure and framework, dependencies, and added backup scripts for rclone

--- a/cms/.env.example
+++ b/cms/.env.example
@@ -20,6 +20,7 @@ DB_TABLE_PREFIX=""
 DB_PORT=3306
 
 # URL & path settings
+SITE_NAME="SELF"
 ASSETS_URL=http://localhost/
 SITE_URL=http://localhost/
 DEFAULT_SITE_URL="http://localhost/"
