--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
         "awesome-sass-easing": "^1.1.2",
         "babel-loader": "^8.1.0",
         "es6-promise": "^4.2.8",
+        "feather-icons": "^4.28.0",
         "foundation-sites": "^6.6.2",
         "hamburgers": "^1.1.3",
         "isomorphic-fetch": "^2.2.1",
-        "jquery": "^3.4.1",
+        "jquery": "^3.5.0",
         "lazysizes": "^5.2.0",
         "lity": "^2.4.0",
         "normalize.css": "^8.0.1",
