--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@dogstudio/highway": "^2.1.3",
         "awesome-sass-easing": "^1.1.2",
         "babel-loader": "^8.1.0",
+        "body-scroll-lock": "^3.0.3",
         "es6-promise": "^4.2.8",
         "feather-icons": "^4.28.0",
         "foundation-sites": "^6.6.2",
