added mailgun settings and fixed backup/sync scripts

--- a/cms/.env.example
+++ b/cms/.env.example
@@ -46,6 +46,11 @@ CLOUDFRONT_URL=
 CLOUDFRONT_DISTRIBUTION_ID=
 CLOUDFRONT_PATH_PREFIX=
 
+# Mailgun Settings
+MAILGUN_DOMAIN=
+MAILGUN_API_KEY=
+MAILGUN_ENDPOINT=
+
 # Redis settings
 REDIS_ENABLED=false
 REDIS_HOSTNAME=redis
