added ability to disable depreciation exceptions

--- a/cms/.env.example
+++ b/cms/.env.example
@@ -5,6 +5,7 @@ BACKUP_ON_UPDATE=0
 DEV_MODE=1
 ENABLE_TEMPLATE_CACHING=0
 ENVIRONMENT=local
+THROW_DEPRECIATION_EXCEPTIONS=1
 IS_SYSTEM_LIVE=1
 RUN_QUEUE_AUTOMATICALLY=1
 SECURITY_KEY=
