updated remote env defaults

--- a/.env.sh.example
+++ b/.env.sh.example
@@ -104,7 +104,7 @@ REMOTE_DB_USING_SSH="yes"
 
 # Remote path constants; paths should always have a trailing /
 REMOTE_ROOT_PATH="REPLACE_ME"
-REMOTE_ASSETS_PATH=${REMOTE_ROOT_PATH}"REPLACE_ME"
+REMOTE_ASSETS_PATH=${REMOTE_ROOT_PATH}${GLOBAL_CRAFT_PATH}"web/assets/"
 
 # Remote database constants; default port for mysql is 3306, default port for postgres is 5432
 REMOTE_DB_NAME="REPLACE_ME"
@@ -128,7 +128,7 @@ REMOTE_PSQL_CMD="psql"
 REMOTE_PG_DUMP_CMD="pg_dump"
 
 # Remote backups path; paths should always have a trailing /
-REMOTE_BACKUPS_PATH="REPLACE_ME"
+REMOTE_BACKUPS_PATH=${REMOTE_ROOT_PATH}"backups/"
 
 # Remote Amazon S3 bucket name
 REMOTE_S3_BUCKET="REPLACE_ME"
