updated craft, fixed linkfield error in craft 3.5 by switching package version

--- a/cms/composer.json
+++ b/cms/composer.json
@@ -21,11 +21,11 @@
   "require": {
     "aelvan/imager": "v2.4.0",
     "barrelstrength/sprout-fields": "^3.6.1",
-    "craftcms/cms": "3.5.0",
+    "craftcms/cms": "3.5.5",
     "craftcms/contact-form": "2.2.7",
     "craftcms/feed-me": "^4.1",
     "craftcms/mailgun": "1.4.3",
-    "craftcms/redactor": "^2.6.1",
+    "craftcms/redactor": "2.7.1",
     "ether/logs": "^3.0.3",
     "ether/seo": "3.6.6",
     "jalendport/craft-queuemanager": "^1.2",
@@ -39,10 +39,10 @@
     "nystudio107/craft-typogrify": "^1.1",
     "ostark/craft-async-queue": "^2.0",
     "rias/craft-scout": "2.1.4",
-    "sebastianlenz/linkfield": "^2.0.0@beta",
+    "sebastianlenz/linkfield": "^2.0.0-beta",
     "solspace/craft-freeform": "3.6.3",
     "spicyweb/craft-embedded-assets": "^2.0",
-    "spicyweb/craft-neo": "2.8.1",
+    "spicyweb/craft-neo": "2.8.6",
     "unionco/calendarize": "^1.2",
     "unionco/craft-related-entry-types": "^0.2.2",
     "verbb/expanded-singles": "^1.0.7",
