--- a/cms/composer.json
+++ b/cms/composer.json
@@ -21,17 +21,17 @@
   "require": {
     "aelvan/imager": "v2.4.0",
     "barrelstrength/sprout-fields": "^3.6.1",
-    "craftcms/cms": "3.5.5",
+    "craftcms/cms": "3.5.17.1",
     "craftcms/contact-form": "2.2.7",
     "craftcms/feed-me": "^4.1",
     "craftcms/mailgun": "1.4.3",
-    "craftcms/redactor": "2.7.1",
+    "craftcms/redactor": "2.8.5",
     "ether/logs": "^3.0.3",
-    "ether/seo": "3.6.6",
+    "ether/seo": "3.6.7",
     "jalendport/craft-queuemanager": "^1.2",
     "marionnewlevant/twig-perversion": "^2.0",
-    "mmikkel/child-me": "1.1.1",
-    "mmikkel/cp-field-inspect": "^1.1.3",
+    "mmikkel/child-me": "1.2.0",
+    "mmikkel/cp-field-inspect": "1.2.3",
     "mmikkel/retcon": "^2.0",
     "nystudio107/craft-minify": "^1.2.5",
     "nystudio107/craft-routemap": "^1.0.0",
@@ -42,11 +42,11 @@
     "sebastianlenz/linkfield": "^2.0.0-beta",
     "solspace/craft-freeform": "3.6.3",
     "spicyweb/craft-embedded-assets": "^2.0",
-    "spicyweb/craft-neo": "2.8.6",
-    "unionco/calendarize": "^1.2",
-    "unionco/craft-related-entry-types": "^0.2.2",
+    "spicyweb/craft-neo": "2.8.15.1",
+    "unionco/calendarize": "1.2.18",
+    "unionco/craft-related-entry-types": "v0.3.0",
     "verbb/expanded-singles": "^1.0.7",
-    "verbb/field-manager": "2.1.8",
+    "verbb/field-manager": "2.2.1",
     "vlucas/phpdotenv": "^3.4.0",
     "yiisoft/yii2-redis": "^2.0.6"
   },
