--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "private": true,
     "dependencies": {
         "@dogstudio/highway": "^2.1.3",
+        "@fortawesome/fontawesome-svg-core": "^1.2.32",
+        "@fortawesome/free-brands-svg-icons": "^5.15.1",
+        "@fortawesome/free-solid-svg-icons": "^5.15.1",
         "awesome-sass-easing": "^1.1.2",
         "babel-loader": "^8.1.0",
         "body-scroll-lock": "^3.0.3",
@@ -24,12 +27,14 @@
         "objectFitPolyfill": "^2.3.0",
         "scrollmonitor": "^1.2.4",
         "smooth-scroll": "^16.1.3",
-        "vee-validate": "^3.2.5",
-        "vue": "^2.6.11",
-        "vue-resource": "^1.5.1"
+        "vee-validate": "^4.1.5",
+        "vue": "^3.0.5",
+        "vue-resource": "^1.5.1",
+        "yup": "^0.32.8"
     },
     "devDependencies": {
         "@babel/core": "^7.9.0",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
         "@babel/preset-env": "^7.9.0",
         "autoprefixer": "^9.7.5",
         "babel-plugin-transform-es2015-template-literals": "^6.22.0",
