--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "objectFitPolyfill": "^2.3.0",
         "scrollmonitor": "^1.2.4",
         "smooth-scroll": "^16.1.3",
+        "swiper": "^6.4.5",
         "vee-validate": "^4.1.5",
         "vue": "^3.0.5",
         "vue-resource": "^1.5.1",
