installed formie, added license keys for neo and formie to .env

--- a/cms/.env.example
+++ b/cms/.env.example
@@ -34,6 +34,8 @@ PLUGIN_RETOUR_LICENSE=
 PLUGIN_SEOMATIC_LICENSE=
 PLUGIN_TRANSCODER_LICENSE=
 PLUGIN_WEBPERF_LICENSE=
+PLUGIN_NEO_LICENSE=
+PLUGIN_FORMIE_LICENSE=
 
 # S3 settings
 S3_KEY_ID=REPLACE_ME
