--- a/cms/composer.json
+++ b/cms/composer.json
@@ -47,6 +47,7 @@
     "unionco/craft-related-entry-types": "v0.3.0",
     "verbb/expanded-singles": "^1.0.7",
     "verbb/field-manager": "2.2.1",
+    "verbb/formie": "1.3.16.1",
     "vlucas/phpdotenv": "^3.4.0",
     "yiisoft/yii2-redis": "^2.0.6"
   },
