--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "css-loader": "^3.5.0",
         "favicons-webpack-plugin": "^3.0.1",
         "file-loader": "^6.0.0",
+        "formdata-polyfill": "^3.0.20",
         "friendly-errors-webpack-plugin": "^1.7.0",
         "mini-css-extract-plugin": "^0.9.0",
         "moment": "^2.24.0",
