updated to Craft Pro

--- a/cms/config/project/project.yaml
+++ b/cms/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1614266406
+dateModified: 1619015962
 email:
   fromEmail: hello@boyerwebstudios.com
   fromName: $SITE_NAME
@@ -156,7 +156,7 @@ plugins:
     enabled: true
     schemaVersion: 1.0.0
 system:
-  edition: solo
+  edition: pro
   live: true
   name: $SITE_NAME
   retryDuration: null
