--- a/cms/composer.json
+++ b/cms/composer.json
@@ -21,33 +21,33 @@
   "require": {
     "aelvan/imager": "v2.4.0",
     "barrelstrength/sprout-fields": "^3.6.1",
-    "craftcms/cms": "3.6.12",
+    "craftcms/cms": "3.7.16",
     "craftcms/contact-form": "2.2.7",
     "craftcms/feed-me": "^4.1",
     "craftcms/mailgun": "1.4.3",
-    "craftcms/redactor": "2.8.6",
-    "ether/logs": "^3.0.3",
-    "ether/seo": "3.6.7",
+    "craftcms/redactor": "2.8.8",
+    "ether/logs": "3.0.4",
+    "ether/seo": "3.7.4",
     "jalendport/craft-queuemanager": "^1.2",
     "marionnewlevant/twig-perversion": "^2.0",
     "mmikkel/child-me": "1.2.0",
-    "mmikkel/cp-field-inspect": "1.2.4",
+    "mmikkel/cp-field-inspect": "1.2.5",
     "mmikkel/retcon": "^2.0",
     "nystudio107/craft-minify": "^1.2.5",
     "nystudio107/craft-routemap": "^1.0.0",
     "nystudio107/craft-scripts": "^1.2.4",
     "nystudio107/craft-typogrify": "^1.1",
-    "ostark/craft-async-queue": "2.2.0",
+    "ostark/craft-async-queue": "2.3.0",
     "rias/craft-scout": "2.1.4",
     "sebastianlenz/linkfield": "^2.0.0-beta",
     "solspace/craft-freeform": "3.6.3",
     "spicyweb/craft-embedded-assets": "^2.0",
-    "spicyweb/craft-neo": "2.9.6",
+    "spicyweb/craft-neo": "2.11.14",
     "unionco/calendarize": "1.2.18",
-    "unionco/craft-related-entry-types": "v0.3.0",
+    "unionco/craft-related-entry-types": "v0.3.2",
     "verbb/expanded-singles": "^1.0.7",
-    "verbb/field-manager": "2.2.2",
-    "verbb/formie": "1.4.1",
+    "verbb/field-manager": "2.2.4",
+    "verbb/formie": "1.4.21.1",
     "vlucas/phpdotenv": "^3.4.0",
     "yiisoft/yii2-redis": "^2.0.6"
   },
